--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
+          <script type="text/javascript" src="js/mespeak/mespeak.js"></script>
     </head>
     <body>
         <!--[if lt IE 7]>
