clean up source code

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <![endif]-->
 
         <!-- Add your site or application content here -->
-        <p>Hello world! This is HTML5 Boilerplate.</p>
+        <p>Ask HAL 9000 a question:</p>
         <input x-webkit-speech style="position: relative; top: 50%; max-width: 600px; width: 60%;" id="speechToTextBox">
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
