--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
 
+        <div id="console">
+        </div>
+
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. 
         <script>
             var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
